--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,43 +44,46 @@ website:
       - text: About
         aria-label: "About Me"
         href: about/index.qmd
+      - text: Services
+        aria-label: "Services"
+        href: services/index.qmd
+      - text: Case Studies
+        aria-label: "Case Studies"
+        href: case_studies/index.qmd
+      - text: Profitable Pricing
+        aria-label: "Profitable Pricing"
+        href: pricing.qmd
+      - text: FAQ
+        aria-label: "FAQ"
+        href: pricing_faq.qmd
       - text: Blog
         aria-label: "Meeting People Where They R"
         href: blog/index.qmd
-      - text: Talks
-        aria-label: "Invited Talks"
-        href: talk/index.qmd  
-      - text: Publications
-        aria-label: "Publications"
-        href: publication/index.qmd
-      - text: Projects
-        aria-label: "Project Portfolio"
-        href: project/index.qmd
-  
-  page-footer:  
+
+#  page-footer:  
     #left: >-
     # &#169; 2024 Silvia Canelón &#8729; Made with [Quarto](https://quarto.org)
-    center: |
-      <a class="link-dark me-1" href="https://www.linkedin.com/in/pavel-logacev" title="LinkedIn" target="_blank" rel="noopener">{{< fa brands linkedin >}}</a>
-      <a class="link-dark me-1" href="https://github.com/plogacev" title="github" target="_blank" rel="noopener">{{< fa brands github >}}</a>
+#    center: |
+#      <a class="link-dark me-1" href="https://www.linkedin.com/in/pavel-logacev" title="LinkedIn" target="_blank" rel="noopener">{{< fa brands linkedin >}}</a>
+#      <a class="link-dark me-1" href="https://github.com/plogacev" title="github" target="_blank" rel="noopener">{{< fa brands github >}}</a>
     #<a class="link-dark me-1" href="/accessibility.html" title="Accessibility commitment" target="_blank" rel="noopener">{{< fa universal-access >}}</a>
     #<a class="link-dark me-1" href="https://bsky.app/profile/silviacanelon.com" title="Bluesky" target="_blank" rel="noopener">{{< fa brands bluesky >}}</a>
     #<a class="link-dark me-1" href="https://orcid.org/0000-0002-2837-2258" title="orcid" target="_blank" rel="noopener">{{< ai orcid >}}</a>
     #<a class="link-dark me-1" href="https://scholar.google.com/citations?user=fhbdTJIAAAAJ" title="Google Scholar" target="_blank"rel="noopener">{{< ai google-scholar >}}</a>
     #<a class="link-dark me-1" href="https://buttondown.com/spcanelon" title="Newsletter" target="_blank" rel="noopener">{{< fa envelope >}}</a>
 
-    right: 
+#    right: 
       #- text: "Accessibility"
       #  aria-label: "Accessibility Commitment"
       #  href: accessibility.qmd
-      - text: "Contact"
-        aria-label: "Contact Form"
-        href: "contact.qmd"
+#      - text: "Contact"
+#        aria-label: "Contact Form"
+#        href: "contact.qmd"
       #- text: "License"
       #  aria-label: "License Details"
       #  href: license.qmd
-      - icon: rss
-        href: blog/index.xml
+#      - icon: rss
+#        href: blog/index.xml
 
 format: 
   html:
