--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,16 +37,16 @@ website:
   navbar:
     #logo: assets/silvia/img/logo_rounded.svg
     # logo: assets/silvia/img/logo_noBg.svg
-    tools:
-    - icon: github
-      href: https://github.com/plogacev
+    #tools:
+    #- icon: github
+    #  href: https://github.com/plogacev
     right:
       - text: About
-        aria-label: "About Me"
-        href: about/index.qmd
+        aria-label: "About"
+        href: about.qmd
       - text: Services
         aria-label: "Services"
-        href: services/index.qmd
+        href: services.qmd
       - text: Case Studies
         aria-label: "Case Studies"
         href: case_studies/index.qmd
@@ -56,50 +56,15 @@ website:
       - text: FAQ
         aria-label: "FAQ"
         href: pricing_faq.qmd
-      - text: Blog
-        aria-label: "Meeting People Where They R"
-        href: blog/index.qmd
-
-#  page-footer:  
-    #left: >-
-    # &#169; 2024 Silvia Canelón &#8729; Made with [Quarto](https://quarto.org)
-#    center: |
-#      <a class="link-dark me-1" href="https://www.linkedin.com/in/pavel-logacev" title="LinkedIn" target="_blank" rel="noopener">{{< fa brands linkedin >}}</a>
-#      <a class="link-dark me-1" href="https://github.com/plogacev" title="github" target="_blank" rel="noopener">{{< fa brands github >}}</a>
-    #<a class="link-dark me-1" href="/accessibility.html" title="Accessibility commitment" target="_blank" rel="noopener">{{< fa universal-access >}}</a>
-    #<a class="link-dark me-1" href="https://bsky.app/profile/silviacanelon.com" title="Bluesky" target="_blank" rel="noopener">{{< fa brands bluesky >}}</a>
-    #<a class="link-dark me-1" href="https://orcid.org/0000-0002-2837-2258" title="orcid" target="_blank" rel="noopener">{{< ai orcid >}}</a>
-    #<a class="link-dark me-1" href="https://scholar.google.com/citations?user=fhbdTJIAAAAJ" title="Google Scholar" target="_blank"rel="noopener">{{< ai google-scholar >}}</a>
-    #<a class="link-dark me-1" href="https://buttondown.com/spcanelon" title="Newsletter" target="_blank" rel="noopener">{{< fa envelope >}}</a>
-
-#    right: 
-      #- text: "Accessibility"
-      #  aria-label: "Accessibility Commitment"
-      #  href: accessibility.qmd
-#      - text: "Contact"
-#        aria-label: "Contact Form"
-#        href: "contact.qmd"
-      #- text: "License"
-      #  aria-label: "License Details"
-      #  href: license.qmd
-#      - icon: rss
-#        href: blog/index.xml
+      #- text: Blog
+      #  aria-label: "Blog"
+      #  href: blog/index.qmd
 
 format: 
   html:
     theme:
       light:
         - cosmo
-        - assets/silvia-theme-light.scss
-        - assets/silvia/colors-light.scss
-        - assets/silvia/fonts.scss
-      #dark: 
-      #  - cosmo
-      #  - assets/silvia-theme-dark.scss
-      #  - assets/silvia/colors-dark.scss
-    highlight-style:
-      light: assets/silvia/a11y-light.theme
-      dark: assets/silvia/a11y-dark.theme
     code-link: true
     pagetitle: "{{< meta title >}}"
     lightbox: true
